k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: furniture-app-svc
  namespace: furniture
spec:
  type: ClusterIP
  selector:
    app: furniture-app
  ports:
    - name: http
      port: 81
      targetPort: 5002
